--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,10 +1,11 @@
 .header {
     background-color: #222;
-    height: 150px;
+    height: 50px;
     padding: 20px;
     color: white;
 }
 
 .title {
+    text-align: center;
     font-size: 1.5em;
 }
